[gd_scene load_steps=6 format=2]

[ext_resource path="res://joc pong/HUD/continua2.png" type="Texture" id=1]
[ext_resource path="res://joc pong/HUD/continua.png" type="Texture" id=2]
[ext_resource path="res://joc pong/HUD/SORTIR.png" type="Texture" id=3]
[ext_resource path="res://joc pong/HUD/SORTIRSELECCINAT.png" type="Texture" id=4]
[ext_resource path="res://joc pong/menu_pausa.gd" type="Script" id=5]

[node name="menu_pausa" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.37842
margin_right = -2.37842
color = Color( 0.137255, 0.137255, 0.12549, 0.203922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 675.0
margin_top = 400.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 568.0
margin_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_right = 568.0
margin_bottom = 200.0
custom_constants/separation = 30

[node name="TextureButton" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 568.0
margin_bottom = 85.0
size_flags_horizontal = 2
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="TextureButton2" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_left = 76.0
margin_top = 115.0
margin_right = 491.0
margin_bottom = 200.0
size_flags_horizontal = 4
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
